crates/test-ui/ui/declare_class_invalid_type3.stderr
error[E0277]: the trait bound `(): Encode` is not satisfied
 --> ui/declare_class_invalid_type3.rs
  |
  | / declare_class!(
  | |     struct CustomObject {
  | |         field: IvarEncode<(), "_field">,
  | |     }
... |
  | |     }
  | | );
  | |_^ the trait `Encode` is not implemented for `()`
  |
  = help: the following other types implement trait `Encode`:
            isize
            i8
            i16
            i32
            i64
            usize
            u8
            u16
          and $N others
  = note: required for `objc2::declare::IvarEncode<()>` to implement `InnerIvarType`
note: required by a bound in `objc2::declare::IvarType::Type`
 --> $WORKSPACE/crates/objc2/src/declare/ivar.rs
  |
  |     type Type: InnerIvarType;
  |                ^^^^^^^^^^^^^ required by this bound in `IvarType::Type`
  = note: this error originates in the macro `$crate::__parse_fields` which comes from the expansion of the macro `declare_class` (in Nightly builds, run with -Z macro-backtrace for more info)
